--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,10 +17,24 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycleViewTask"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginEnd="36dp"
+        app:layout_constraintTop_toBottomOf="@id/taskText"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:listitem="@layout/item_task"
+        tools:itemCount="3"/>
+
     <ImageView
         android:id="@+id/emptyImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="invisible"
         android:src="@drawable/image1"
         android:layout_marginTop="64dp"
         app:layout_constraintTop_toBottomOf="@id/taskText"
@@ -32,6 +46,7 @@
         android:id="@+id/emptyText1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="invisible"
         android:layout_marginTop="12dp"
         android:text="@string/emptyText1"
         android:textSize="20sp"
@@ -43,6 +58,7 @@
         android:id="@+id/emptyText2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="invisible"
         android:layout_marginTop="12dp"
         android:text="@string/emptyText2"
         app:layout_constraintTop_toBottomOf="@id/emptyText1"
