--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#8687E7</color>
     <color name="gray">#686D76</color>
+    <color name="red">#FA4032</color>
 </resources>
