feat: consume api user

--- a/app/src/main/res/layout/activity_detail_task.xml
+++ b/app/src/main/res/layout/activity_detail_task.xml
@@ -64,14 +64,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="36dp"
+        android:padding="5dp"
         android:background="@drawable/label"
         android:backgroundTint="@color/blue"
+        android:text="00:00"
+        android:textColor="@color/white"
+        android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@id/timerText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@id/timerText"
-        app:layout_constraintTop_toTopOf="@id/timerText"
-        app:drawableStartCompat="@drawable/baseline_add_24" />
+        app:layout_constraintTop_toTopOf="@id/timerText" />
 
     <TextView
         android:id="@+id/priorityText"
@@ -91,15 +94,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="36dp"
+        android:padding="5dp"
         android:background="@drawable/label"
         android:backgroundTint="@color/blue"
+        android:text="0"
+        android:textSize="12sp"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="@id/priorityText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@id/priorityText"
         app:layout_constraintTop_toTopOf="@id/priorityText"
-        app:layout_constraintVertical_bias="0.0"
-        app:drawableStartCompat="@drawable/baseline_add_24" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/categoryText"
@@ -119,15 +125,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="36dp"
+        android:padding="5dp"
         android:background="@drawable/label"
         android:backgroundTint="@color/blue"
+        android:text="none"
+        android:textSize="12dp"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="@id/categoryText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@id/categoryText"
         app:layout_constraintTop_toTopOf="@id/categoryText"
-        app:layout_constraintVertical_bias="0.0"
-        app:drawableStartCompat="@drawable/baseline_add_24" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:layout_width="wrap_content"
