--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -7,8 +7,8 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
         app:cardCornerRadius="10dp"
+        android:padding="10dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,6 +31,7 @@
                 app:layout_constraintEnd_toEndOf="parent"/>
             
             <TextView
+                android:id="@+id/taskTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
@@ -47,13 +48,15 @@
                 android:padding="5dp"
                 android:layout_marginTop="12dp"
                 android:layout_marginEnd="12dp"
+                android:drawablePadding="6dp"
                 android:background="@drawable/label"
                 android:backgroundTint="@color/blue"
                 android:text="@string/category"
                 android:textColor="@color/white"
                 app:layout_constraintTop_toBottomOf="@id/taskTitle"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/taskPriority"/>
+                app:layout_constraintEnd_toStartOf="@id/taskPriority"
+                app:drawableStartCompat="@drawable/baseline_add_24" />
 
             <TextView
                 android:id="@+id/taskPriority"
@@ -62,11 +65,13 @@
                 android:padding="5dp"
                 android:layout_marginTop="12dp"
                 android:background="@drawable/label2"
+                android:drawablePadding="6dp"
                 android:text="@string/priority"
-                android:textColor="@color/blue"
+                android:textSize="16sp"
                 app:layout_constraintTop_toBottomOf="@id/taskTitle"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:drawableStartCompat="@drawable/flag" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
