--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -9,6 +9,7 @@
         android:layout_height="wrap_content"
         app:cardCornerRadius="10dp"
         android:padding="10dp"
+        android:layout_marginBottom="12dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
