--- a/app/src/main/res/layout/activity_edit_task.xml
+++ b/app/src/main/res/layout/activity_edit_task.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.task.DetailTaskActivity">
+    tools:context=".ui.task.AddTaskActivity">
 
     <ImageButton
         android:id="@+id/backButton"
@@ -16,35 +16,59 @@
         android:src="@drawable/baseline_arrow_back_24"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="@string/back_button" />
+        android:contentDescription="@string/back_button"/>
 
     <TextView
-        android:id="@+id/title"
-        android:layout_width="0dp"
+        android:id="@+id/taskText"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
         android:layout_marginTop="24dp"
-        android:layout_marginEnd="36dp"
-        android:text="@string/title"
+        android:layout_marginStart="36dp"
+        android:text="@string/edit_task"
         android:textSize="20sp"
         android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/backButton"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/titleEditTextLayout"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginEnd="36dp"
+        app:layout_constraintTop_toBottomOf="@id/taskText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/backButton" />
+        android:hint="@string/title">
 
-    <TextView
-        android:id="@+id/description"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/titleEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/descriptionEditTextLayout"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:layout_marginStart="36dp"
         android:layout_marginEnd="36dp"
-        android:text="@string/description"
-        android:textSize="16sp"
-        android:textColor="@color/gray"
-        app:layout_constraintTop_toBottomOf="@id/title"
+        app:layout_constraintTop_toBottomOf="@id/titleEditTextLayout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:hint="@string/description">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/descriptionEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textMultiLine" />
+    </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
         android:id="@+id/timerText"
@@ -56,7 +80,7 @@
         android:textSize="16sp"
         android:drawablePadding="12dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/description"
+        app:layout_constraintTop_toBottomOf="@id/descriptionEditTextLayout"
         app:drawableStartCompat="@drawable/timer" />
 
     <TextView
@@ -67,14 +91,15 @@
         android:padding="5dp"
         android:background="@drawable/label"
         android:backgroundTint="@color/blue"
-        android:text="00:00"
         android:textColor="@color/white"
-        android:textSize="16sp"
+        android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@id/timerText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@id/timerText"
-        app:layout_constraintTop_toTopOf="@id/timerText" />
+        app:layout_constraintTop_toTopOf="@id/timerText"
+        android:clickable="true"
+        android:focusable="true" />
 
     <TextView
         android:id="@+id/priorityText"
@@ -95,18 +120,18 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="36dp"
         android:padding="5dp"
-        android:drawablePadding="6dp"
         android:background="@drawable/label"
         android:backgroundTint="@color/blue"
-        android:text="0sp"
-        android:textSize="16sp"
         android:textColor="@color/white"
+        android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@id/priorityText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@id/priorityText"
         app:layout_constraintTop_toTopOf="@id/priorityText"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        android:clickable="true"
+        android:focusable="true" />
 
     <TextView
         android:id="@+id/categoryText"
@@ -129,45 +154,27 @@
         android:padding="5dp"
         android:background="@drawable/label"
         android:backgroundTint="@color/blue"
-        android:text="none"
-        android:textSize="16sp"
         android:textColor="@color/white"
-        android:drawablePadding="6dp"
+        android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@id/categoryText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@id/categoryText"
         app:layout_constraintTop_toTopOf="@id/categoryText"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <TextView
-        android:id="@+id/deleteButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="36dp"
-        android:drawablePadding="12dp"
-        android:text="@string/delete_task"
-        android:textColor="@color/red"
-        android:textStyle="bold"
-        android:textSize="16sp"
+        app:layout_constraintVertical_bias="0.0"
         android:clickable="true"
-        app:drawableStartCompat="@drawable/trash"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/categoryText"
         android:focusable="true" />
 
-    <Button
-        android:id="@+id/editButton"
-        android:layout_width="match_parent"
+    <ImageButton
+        android:id="@+id/sendButton"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="36dp"
-        android:layout_marginStart="36dp"
         android:layout_marginBottom="36dp"
-        android:text="@string/edit_task"
+        android:background="?android:attr/selectableItemBackgroundBorderless"
         android:contentDescription="@string/next_button"
+        android:src="@drawable/send"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <com.google.android.material.progressindicator.LinearProgressIndicator
