--- a/app/src/main/res/layout/category_selection.xml
+++ b/app/src/main/res/layout/category_selection.xml
@@ -10,7 +10,7 @@
         android:id="@+id/taskPriority"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Task Category"
+        android:text="@string/task_category"
         android:textSize="16sp"
         android:textColor="@color/black"
         android:textStyle="bold"
@@ -59,7 +59,7 @@
                 android:id="@+id/groceryText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Grocery"
+                android:text="@string/grocery"
                 android:textColor="@color/black"
                 android:gravity="center"/>
         </LinearLayout>
@@ -90,7 +90,7 @@
                 android:id="@+id/workText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Work"
+                android:text="@string/work"
                 android:textColor="@color/black"
                 android:gravity="center"/>
         </LinearLayout>
@@ -119,7 +119,7 @@
                 android:id="@+id/sportText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Sport"
+                android:text="@string/sport"
                 android:textColor="@color/black"
                 android:gravity="center"/>
         </LinearLayout>
@@ -148,7 +148,7 @@
                 android:id="@+id/designText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Design"
+                android:text="@string/design"
                 android:textColor="@color/black"
                 android:gravity="center"/>
         </LinearLayout>
@@ -177,7 +177,7 @@
                 android:id="@+id/universityText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="University"
+                android:text="@string/university"
                 android:textColor="@color/black"
                 android:gravity="center"/>
         </LinearLayout>
@@ -206,7 +206,7 @@
                 android:id="@+id/socialText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Social"
+                android:text="@string/social"
                 android:textColor="@color/black"
                 android:gravity="center"/>
         </LinearLayout>
@@ -235,7 +235,7 @@
                 android:id="@+id/musicText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Music"
+                android:text="@string/music"
                 android:textColor="@color/black"
                 android:gravity="center"/>
         </LinearLayout>
@@ -264,7 +264,7 @@
                 android:id="@+id/healthText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Health"
+                android:text="@string/health"
                 android:textColor="@color/black"
                 android:gravity="center"/>
         </LinearLayout>
@@ -293,7 +293,7 @@
                 android:id="@+id/movieText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Movie"
+                android:text="@string/movie"
                 android:textColor="@color/black"
                 android:gravity="center"/>
         </LinearLayout>
@@ -304,7 +304,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginTop="12dp"
-    android:text="Add Category"
+    android:text="@string/add_category"
     android:layout_gravity="center"
     android:backgroundTint="@color/blue" />
 </LinearLayout>
