--- a/app/src/main/res/layout/priority_selection.xml
+++ b/app/src/main/res/layout/priority_selection.xml
@@ -10,7 +10,7 @@
         android:id="@+id/taskPriority"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Task Priority"
+        android:text="@string/task_priority"
         android:textSize="16sp"
         android:textColor="@color/black"
         android:textStyle="bold"
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_columnWeight="1"
             android:layout_margin="8dp"
-            android:text="1"
+            android:text="@string/_1"
             android:textSize="16sp"
             android:textColor="@color/black"
             android:drawableTop="@drawable/flag"
@@ -50,7 +50,7 @@
             android:layout_height="wrap_content"
             android:layout_columnWeight="1"
             android:layout_margin="8dp"
-            android:text="2"
+            android:text="@string/_2"
             android:textSize="16sp"
             android:textColor="@color/black"
             android:drawableTop="@drawable/flag"
@@ -63,7 +63,7 @@
             android:layout_height="wrap_content"
             android:layout_columnWeight="1"
             android:layout_margin="8dp"
-            android:text="3"
+            android:text="@string/_3"
             android:textSize="16sp"
             android:textColor="@color/black"
             android:drawableTop="@drawable/flag"
@@ -83,14 +83,14 @@
             android:id="@+id/cancelButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Cancel"
+            android:text="@string/cancel"
             android:textColor="@color/white"/>
 
         <Button
             android:id="@+id/saveButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Save"
+            android:text="@string/save"
             android:textColor="@color/white"
             android:layout_marginStart="8dp"/>
     </LinearLayout>
