fix: intent bug and ui

--- a/app/src/main/res/layout/activity_detail_task.xml
+++ b/app/src/main/res/layout/activity_detail_task.xml
@@ -98,7 +98,8 @@
         android:drawablePadding="6dp"
         android:background="@drawable/label"
         android:backgroundTint="@color/blue"
-        android:text="0sp"
+        android:drawableStart="@drawable/flag"
+        android:text="0"
         android:textSize="16sp"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="@id/priorityText"
